--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
