--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.61.0",
-    "sass-loader": "^13.2.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.3",
+    "sass": "^1.61.0",
     "vite": "^4.2.0"
   }
 }
